[gd_scene load_steps=9 format=2]

[ext_resource path="res://Objects/Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Basic_Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Puck.tscn" type="PackedScene" id=3]
[ext_resource path="res://Game_Manager.gd" type="Script" id=4]
[ext_resource path="res://Sounds/342410__teacoma__straight-techno-beat.wav" type="AudioStream" id=5]
[ext_resource path="res://Objects/Neon_Wall.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/Blank.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 114.163 )

[node name="Scene" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.2, 0.184314, 0.184314, 1 )
position = Vector2( 512.652, 299.813 )
scale = Vector2( 15.9597, 9.30851 )
texture = ExtResource( 7 )

[node name="Player_1" parent="." groups=[
"Player_1",
] instance=ExtResource( 1 )]
modulate = Color( 0.258824, 0.627451, 0.94902, 1 )
position = Vector2( 185.809, 303.839 )
collision_layer = 3

[node name="Player_2" parent="." groups=[
"Player_2",
] instance=ExtResource( 1 )]
modulate = Color( 0.909804, 0.227451, 0.227451, 1 )
position = Vector2( 852.954, 299.082 )
collision_layer = 2147483651

[node name="Puck" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.905882, 0.764706, 0.27451, 1 )
position = Vector2( 522.653, 281.7 )
z_index = 5

[node name="Walls_Neon" type="Node2D" parent="."]
position = Vector2( 0, -48 )
z_index = 2

[node name="Neon_Wall" parent="Walls_Neon" instance=ExtResource( 6 )]
modulate = Color( 1, 0.431373, 0.431373, 1 )
position = Vector2( 32, 48 )

[node name="Neon_Wall12" parent="Walls_Neon" instance=ExtResource( 6 )]
modulate = Color( 1, 0.431373, 0.431373, 1 )
position = Vector2( 32, 144 )

[node name="Neon_Wall14" parent="Walls_Neon" instance=ExtResource( 6 )]
modulate = Color( 1, 0.431373, 0.431373, 1 )
position = Vector2( 32, 176 )

[node name="Neon_Wall2" parent="Walls_Neon" instance=ExtResource( 6 )]
modulate = Color( 1, 0.431373, 0.431373, 1 )
position = Vector2( 128, 48 )

[node name="Neon_Wall3" parent="Walls_Neon" instance=ExtResource( 6 )]
modulate = Color( 1, 0.431373, 0.431373, 1 )
position = Vector2( 224, 48 )

[node name="Neon_Wall4" parent="Walls_Neon" instance=ExtResource( 6 )]
modulate = Color( 1, 0.431373, 0.431373, 1 )
position = Vector2( 320, 48 )

[node name="Neon_Wall5" parent="Walls_Neon" instance=ExtResource( 6 )]
modulate = Color( 0.933333, 0.72549, 1, 1 )
position = Vector2( 416, 48 )

[node name="Neon_Wall6" parent="Walls_Neon" instance=ExtResource( 6 )]
modulate = Color( 0.933333, 0.72549, 1, 1 )
position = Vector2( 512, 48 )

[node name="Neon_Wall7" parent="Walls_Neon" instance=ExtResource( 6 )]
modulate = Color( 0.933333, 0.72549, 1, 1 )
position = Vector2( 608, 48 )

[node name="Neon_Wall8" parent="Walls_Neon" instance=ExtResource( 6 )]
modulate = Color( 1, 0.733333, 0.392157, 1 )
position = Vector2( 704, 48 )

[node name="Neon_Wall9" parent="Walls_Neon" instance=ExtResource( 6 )]
modulate = Color( 1, 0.733333, 0.392157, 1 )
position = Vector2( 800, 48 )

[node name="Neon_Wall10" parent="Walls_Neon" instance=ExtResource( 6 )]
modulate = Color( 1, 0.733333, 0.392157, 1 )
position = Vector2( 896, 48 )

[node name="Neon_Wall11" parent="Walls_Neon" instance=ExtResource( 6 )]
modulate = Color( 1, 0.733333, 0.392157, 1 )
position = Vector2( 992, 48 )

[node name="Neon_Wall13" parent="Walls_Neon" instance=ExtResource( 6 )]
modulate = Color( 1, 0.733333, 0.392157, 1 )
position = Vector2( 992, 144 )

[node name="Neon_Wall15" parent="Walls_Neon" instance=ExtResource( 6 )]
modulate = Color( 1, 0.733333, 0.392157, 1 )
position = Vector2( 992, 176 )

[node name="Walls_Neon2" type="Node2D" parent="."]
position = Vector2( 0, 568 )
z_index = 2

[node name="Neon_Wall" parent="Walls_Neon2" instance=ExtResource( 6 )]
modulate = Color( 0.341176, 0.576471, 0.909804, 1 )
position = Vector2( 32, 48 )

[node name="Neon_Wall12" parent="Walls_Neon2" instance=ExtResource( 6 )]
modulate = Color( 0.341176, 0.576471, 0.909804, 1 )
position = Vector2( 32, -48 )

[node name="Neon_Wall14" parent="Walls_Neon2" instance=ExtResource( 6 )]
modulate = Color( 0.341176, 0.576471, 0.909804, 1 )
position = Vector2( 32, -104 )

[node name="Neon_Wall2" parent="Walls_Neon2" instance=ExtResource( 6 )]
modulate = Color( 0.341176, 0.576471, 0.909804, 1 )
position = Vector2( 128, 48 )

[node name="Neon_Wall3" parent="Walls_Neon2" instance=ExtResource( 6 )]
modulate = Color( 0.341176, 0.576471, 0.909804, 1 )
position = Vector2( 224, 48 )

[node name="Neon_Wall4" parent="Walls_Neon2" instance=ExtResource( 6 )]
modulate = Color( 0.341176, 0.576471, 0.909804, 1 )
position = Vector2( 320, 48 )

[node name="Neon_Wall5" parent="Walls_Neon2" instance=ExtResource( 6 )]
modulate = Color( 0.341176, 0.576471, 0.909804, 1 )
position = Vector2( 416, 48 )

[node name="Neon_Wall6" parent="Walls_Neon2" instance=ExtResource( 6 )]
modulate = Color( 0.427451, 0.427451, 0.427451, 1 )
position = Vector2( 512, 48 )

[node name="Neon_Wall7" parent="Walls_Neon2" instance=ExtResource( 6 )]
modulate = Color( 0.686275, 1, 0.541176, 1 )
position = Vector2( 608, 48 )

[node name="Neon_Wall8" parent="Walls_Neon2" instance=ExtResource( 6 )]
modulate = Color( 0.686275, 1, 0.541176, 1 )
position = Vector2( 704, 48 )

[node name="Neon_Wall9" parent="Walls_Neon2" instance=ExtResource( 6 )]
modulate = Color( 0.686275, 1, 0.541176, 1 )
position = Vector2( 800, 48 )

[node name="Neon_Wall10" parent="Walls_Neon2" instance=ExtResource( 6 )]
modulate = Color( 0.686275, 1, 0.541176, 1 )
position = Vector2( 896, 48 )

[node name="Neon_Wall11" parent="Walls_Neon2" instance=ExtResource( 6 )]
modulate = Color( 0.686275, 1, 0.541176, 1 )
position = Vector2( 992, 48 )

[node name="Neon_Wall13" parent="Walls_Neon2" instance=ExtResource( 6 )]
modulate = Color( 0.686275, 1, 0.541176, 1 )
position = Vector2( 992, -48 )

[node name="Neon_Wall15" parent="Walls_Neon2" instance=ExtResource( 6 )]
modulate = Color( 0.686275, 1, 0.541176, 1 )
position = Vector2( 992, -104 )

[node name="Paddle Walls" type="Node2D" parent="."]

[node name="Node2D2" parent="Paddle Walls" instance=ExtResource( 2 )]
modulate = Color( 0.921569, 0.6, 0.219608, 0.192157 )
position = Vector2( 521.769, 307.61 )
scale = Vector2( 0.25, 1 )
collision_layer = 2
collision_mask = 2

[node name="Node2D3" parent="Paddle Walls" instance=ExtResource( 2 )]
modulate = Color( 0.227451, 0.541176, 0.905882, 0.192157 )
position = Vector2( 32.545, 309.023 )
collision_layer = 2
collision_mask = 2

[node name="Node2D4" parent="Paddle Walls" instance=ExtResource( 2 )]
modulate = Color( 0.878431, 0.215686, 0.215686, 0.192157 )
position = Vector2( 992.2, 309.023 )
collision_layer = 2
collision_mask = 2

[node name="Walls" type="Node2D" parent="."]
visible = false

[node name="Node2D" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 31.242, -150 )

[node name="Node2D5" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 31.242, 750 )

[node name="Node2D3" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 533.087, 31.4278 )
rotation = 1.5708
scale = Vector2( 1, 1.68 )

[node name="Node2D4" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 533.087, 566.146 )
rotation = 1.5708
scale = Vector2( 1, 1.68 )

[node name="Node2D2" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 993.994, -150 )

[node name="Node2D6" parent="Walls" instance=ExtResource( 2 )]
position = Vector2( 993.994, 750 )

[node name="Goal_Scores" type="Node2D" parent="."]

[node name="Player_1_Goalpost" type="Area2D" parent="Goal_Scores"]
position = Vector2( -83.9052, 298.163 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal_Scores/Player_1_Goalpost"]
position = Vector2( 3.9052, -2.16299 )
shape = SubResource( 1 )

[node name="Player_2_Goalpost" type="Area2D" parent="Goal_Scores"]
position = Vector2( 1105.75, 298.163 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal_Scores/Player_2_Goalpost"]
shape = SubResource( 1 )

[node name="ui" type="Node2D" parent="."]
position = Vector2( 520, 8 )
z_index = 10

[node name="Player_1" type="Label" parent="ui"]
modulate = Color( 0.172549, 0.423529, 0.811765, 1 )
margin_left = -122.74
margin_top = -6.4526
margin_right = -106.74
margin_bottom = 24.5474
rect_scale = Vector2( 2.5, 2.5 )
text = "P1
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_2" type="Label" parent="ui"]
modulate = Color( 0.321569, 0.101961, 0.101961, 1 )
margin_left = 53.26
margin_top = -6.4526
margin_right = 93.26
margin_bottom = 24.5474
rect_scale = Vector2( 2.5, 2.5 )
text = "P2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_Board" type="Label" parent="ui"]
modulate = Color( 0.0627451, 0.0588235, 0.0588235, 1 )
margin_left = -58.74
margin_top = -6.4526
margin_right = -18.74
margin_bottom = 7.5474
rect_scale = Vector2( 2.5, 2.5 )
text = "Score"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music_Player" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Music_Player"]
stream = ExtResource( 5 )
autoplay = true
[connection signal="Goal_Sound" from="." to="Puck" method="_on_Scene_Goal_Sound"]
[connection signal="Reset_Ball" from="." to="Puck" method="_on_Scene_Reset_Ball"]
[connection signal="body_entered" from="Goal_Scores/Player_1_Goalpost" to="." method="_on_Player_1_Goalpost_body_entered"]
[connection signal="body_entered" from="Goal_Scores/Player_2_Goalpost" to="." method="_on_Player_2_Goalpost_body_entered"]
